--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.47</version>
+            <version>8.0.25</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -44,7 +44,147 @@
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.3.1</version>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId></groupId>-->
+<!--            <artifactId></artifactId>-->
+<!--        </dependency>-->
 
     </dependencies>
 
+<!--    <build>-->
+<!--        <sourceDirectory>src/main/java</sourceDirectory>-->
+<!--        <resources>-->
+<!--            &lt;!&ndash; 把src/main/resources目录下所有的文件拷贝到conf目录中 &ndash;&gt;-->
+<!--            <resource>-->
+<!--                <directory>src/main/resources</directory>-->
+<!--                <targetPath>${project.build.directory}/conf</targetPath>-->
+<!--            </resource>-->
+<!--            &lt;!&ndash; 把lib目录下所有的文件拷贝到lib目录中-->
+<!--            （可能有些jar包没有办法在maven中找到，需要放在lib目录中） &ndash;&gt;-->
+<!--            <resource>-->
+<!--                <directory>lib</directory>-->
+<!--                <targetPath>${project.build.directory}/lib</targetPath>-->
+<!--            </resource>-->
+<!--            &lt;!&ndash; 把放在根目录下的脚本文件.sh,.bat拷贝到bin目录中 &ndash;&gt;-->
+<!--            <resource>-->
+<!--                <directory>.</directory>-->
+<!--                <includes>-->
+<!--                    <include>**/*.sh</include>-->
+<!--                    <include>**/*.bat</include>-->
+<!--                </includes>-->
+<!--                <targetPath>${project.build.directory}/bin</targetPath>-->
+<!--            </resource>-->
+<!--        </resources>-->
+
+<!--        <plugins>-->
+<!--            &lt;!&ndash; 用于编译的plugin &ndash;&gt;-->
+<!--&lt;!&ndash;            <plugin>&ndash;&gt;-->
+<!--&lt;!&ndash;                <groupId>org.apache.maven.plugins</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;                <artifactId>maven-compiler-plugin</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;                <version>3.1</version>&ndash;&gt;-->
+<!--&lt;!&ndash;                <configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <fork>true</fork>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <defaultLibBundleDir>lib</defaultLibBundleDir>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <source>1.7</source>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <target>1.7</target>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <encoding>UTF-8</encoding>&ndash;&gt;-->
+<!--&lt;!&ndash;                    &lt;!&ndash; 如果配置了JAVA_HOME,下面应该可以不用配 &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;                    <executable>C:\Program Files (x86)\Java\jdk1.8.0_91\bin\javac.exe</executable>&ndash;&gt;-->
+<!--&lt;!&ndash;                </configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;            </plugin>&ndash;&gt;-->
+
+<!--            &lt;!&ndash; 用于生成jar包的plugin &ndash;&gt;-->
+<!--&lt;!&ndash;            <plugin>&ndash;&gt;-->
+<!--&lt;!&ndash;                <groupId>org.apache.maven.plugins</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;                <artifactId>maven-jar-plugin</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;                <version>2.6</version>&ndash;&gt;-->
+<!--&lt;!&ndash;                <configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;                    &lt;!&ndash; 把生成的jar包放在lib目录下（和其他所有jar包一起） &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;                    <outputDirectory>${project.build.directory}/lib</outputDirectory>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <archive>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <manifest>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <addClasspath>true</addClasspath>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <classpathPrefix>lib/</classpathPrefix>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </manifest>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </archive>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <excludes>&ndash;&gt;-->
+<!--&lt;!&ndash;                        &lt;!&ndash; 排除掉一些文件,不要放到jar包中，&ndash;&gt;-->
+<!--&lt;!&ndash;                        这里是为了排除掉src/main/resources中的文件（它们应该放到conf目录）&ndash;&gt;-->
+<!--&lt;!&ndash;                        这里只能指定要排除的目标文件，而不能指定源文件，虽然不够完美，但是基本能达到目的。 &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;                        <exclude>*.xml</exclude>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <exclude>*.properties</exclude>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </excludes>&ndash;&gt;-->
+<!--&lt;!&ndash;                </configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;            </plugin>&ndash;&gt;-->
+
+<!--            &lt;!&ndash; 用于拷贝maven依赖的plugin &ndash;&gt;-->
+<!--&lt;!&ndash;            <plugin>&ndash;&gt;-->
+<!--&lt;!&ndash;                <groupId>org.apache.maven.plugins</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;                <artifactId>maven-dependency-plugin</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;                <version>2.10</version>&ndash;&gt;-->
+<!--&lt;!&ndash;                <executions>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <id>copy-dependencies</id>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <phase>package</phase>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <goals>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <goal>copy-dependencies</goal>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </goals>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;                            &lt;!&ndash; 把依赖的所有maven jar包拷贝到lib目录中（这样所有的jar包都在lib目录中） &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;                            <outputDirectory>${project.build.directory}/lib</outputDirectory>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                </executions>&ndash;&gt;-->
+<!--&lt;!&ndash;            </plugin>&ndash;&gt;-->
+
+<!--            &lt;!&ndash; 用于拷贝resource的plugin &ndash;&gt;-->
+<!--&lt;!&ndash;            <plugin>&ndash;&gt;-->
+<!--&lt;!&ndash;                <groupId>org.apache.maven.plugins</groupId>&ndash;&gt;-->
+<!--&lt;!&ndash;                <artifactId>maven-resources-plugin</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;                <version>2.7</version>&ndash;&gt;-->
+<!--&lt;!&ndash;                <configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <encoding>UTF-8</encoding>&ndash;&gt;-->
+<!--&lt;!&ndash;                </configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;            </plugin>&ndash;&gt;-->
+
+<!--            &lt;!&ndash; 配置生成源代码jar的plugin &ndash;&gt;-->
+<!--&lt;!&ndash;            <plugin>&ndash;&gt;-->
+<!--&lt;!&ndash;                <artifactId>maven-source-plugin</artifactId>&ndash;&gt;-->
+<!--&lt;!&ndash;                <version>2.4</version>&ndash;&gt;-->
+<!--&lt;!&ndash;                <configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <attach>true</attach>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <encoding>UTF-8</encoding>&ndash;&gt;-->
+<!--&lt;!&ndash;                    &lt;!&ndash; 配置源代码jar文件的存放路径，和其他jar文件一起放在lib目录 &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;                    <outputDirectory>${project.build.directory}/lib</outputDirectory>&ndash;&gt;-->
+<!--&lt;!&ndash;                </configuration>&ndash;&gt;-->
+<!--&lt;!&ndash;                <executions>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <phase>compile</phase>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <goals>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <goal>jar</goal>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </goals>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </execution>&ndash;&gt;-->
+<!--&lt;!&ndash;                </executions>&ndash;&gt;-->
+<!--&lt;!&ndash;            </plugin>&ndash;&gt;-->
+
+<!--        </plugins>-->
+<!--    </build>-->
 </project>
